# Backend

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  Knowmark.toml  README.md  Rocket.toml  TODO.md  wrangler.toml
docs/: Dokumentacija.md  Endpoints.md  Running.md  Security.md  User Stories.md
security/: password.salt  user_auth.pem  user_auth.pem.pub
src/: client.rs  config.rs  crypto.rs  data.rs  error.rs  jwt.rs  lib.rs  main.rs  role.rs  security.rs  settings.rs  user.rs  util.rs
src/data/: mod.rs
src/data/class/: db.rs  mod.rs
src/data/quiz/: mod.rs
src/data/user/: db.rs  mod.rs  profile.rs
src/middleware/: paging.rs
src/resp/: crypto.rs  jwt.rs  mod.rs  problem.rs  util.rs
src/route/: class.rs  files.rs  mod.rs  quiz.rs  users.rs
src/user/: mod.rs  profile.rs
