[workspace]
[package]
name = "knowmark_backend"
version = "0.1.0"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
edition = "2018"

[[bin]]
name="knowmark-server"
path="src/bin/server.rs"

[[bin]]
name="knowmark-win-service"
path="src/bin/service.rs"
required-features=["windows-service"]

[dependencies]
# Windows only
windows-service = { version = "0.6", optional = true }

# Web
rocket = { version = "0.5.0-rc", features = [
    "json",
    "secrets",
    "uuid",
] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "54fae07" }
rust-crypto = "0.2"

tokio = { version = "1", features = [ "full" ] }

mongodb = { version = "2.3", features = ["zstd-compression"] }
bson = { version = "2.4", features = ["uuid-1"] }

# Crypto
rsa = "0.6"
sha2 = "0.10"
jsonwebtoken = "8.1"

# Serialization
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
serde_json = "1.0"

base64 = "0.21"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "1.1", features = [
    "serde",
    "v4",
    "v5",
] }

# Functionality
rand = "0.8"
regex = "1.5"
dotenv = "0.15"
lazy_static = "1.4"
derive_more = "0.99"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
wiremock = "0.5"
lazy_static = "1.4"
