[workspace]
[package]
name = "knowmark_backend"
version = "0.1.0"
authors = ["Tin Švagelj <tin.svagelj@live.com>"]
edition = "2018"

[[bin]]
name = "knowmark-server"
path = "src/bin/server.rs"

[[bin]]
name = "knowmark-win-service"
path = "src/bin/service.rs"
required-features = ["windows-service"]

[features]
default = []
tls = ["rocket/tls"]
validation-regex = ["regex"]

[dependencies]
# Windows only
windows-service = { version = "0.6", optional = true }

# Web
rocket = { version = "0.5.0-rc", features = ["json", "uuid"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "985098d" }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa", rev = "cf53488", features = [
    "rocket",
] }
utoipa = { git = "https://github.com/juhaku/utoipa", rev = "cf53488", features = [
    "rocket_extras",
    "chrono",
    "uuid",
    "repr",
] }
# bcrypt
rust-crypto = "0.2"

tokio = { version = "1", features = ["full"] }

mongodb = { version = "2.3", features = ["zstd-compression"] }
bson = { version = "2.4", features = ["uuid-1"] }

# Crypto
rsa = "0.9.1"
sha2 = "0.10.6"
jsonwebtoken = "8.3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4", "v5"] }

# Functionality
rand = "0.8"
regex = { version = "1.5", optional = true }
dotenv = "0.15"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
